--- a/SEO-Project/html/Cybersécurité.html
+++ b/SEO-Project/html/Cybersécurité.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset= "UTF-8">
 		<title>formateur cybersecurité lille</title>
-        <meta name="description" content="Vous travaillez dans le somaine de la cybersécurité et souhaiter intervenir dans une école pour l'apprendre va nos etudiants">
+        <meta name="description" content="Vous travaillez dans le domaine de la cybersécurité et souhaitez intervenir dans une école pour l'apprendre à nos etudiants">
         <style>
             body {
                 font-family: Arial, sans-serif;
