--- a/SEO-Project/html/Intervenant-Informatique.html
+++ b/SEO-Project/html/Intervenant-Informatique.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset= "UTF-8">
 		<title>recrutement informatique lille</title>
-        <meta name="description" content="Vous travaillez dans le secteur de l'informatique, êtes interesser de faire des cours pour notre école...">
+        <meta name="description" content="Vous travaillez dans le secteur de l'informatique, êtes interessés de faire des cours pour notre école...">
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -38,7 +38,7 @@
 	<body>
         <header>
             <div class="tab-container">
-                <a href="Enigma-school.html" class="tab">Acceuil</a>
+                <a href="Enigma-school.html" class="tab">Accueil</a>
                 <a href="https://enigma-school.com">Notre site Officiel</a>
             </div>
         </header>
