--- a/SEO-Project/html/Intervenant-Informatique.html
+++ b/SEO-Project/html/Intervenant-Informatique.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset= "UTF-8">
 		<title>recrutement informatique lille</title>
-        <meta name="description" content="Vous travaillez dans le secteur de l'informatique, êtes interessés de faire des cours pour notre école...">
+        <meta name="description" content="Vous travaillez dans le secteur de l'informatique et êtes interessés de faire des cours pour notre école...">
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -48,7 +48,7 @@
         <div class="tab-container"> 
             <a href="Cybersécurité.html" class="tab">Formateur Cybersécurité</a>
             <a href="Developpement-web.html" class="tab">Formateur Dev</a>
-            <a href="Data-scientist.html" class="tab">Formateur Data scientist</a>
+            <a href="Data-scientist.html" class="tab">Formateur Data Scientist</a>
         </div>
 
         <h1>Comment devenir intervenant à Enigma ?</h1>
